--- a/planets-exercise/index.html
+++ b/planets-exercise/index.html
@@ -11,18 +11,24 @@
 <h1>How old are you on different planets?</h1>
 
 <form>
-    <input type="text" class="input">
+    <input type="number" class="input">
     <button type="submit">Submit</button>
 </form>
 
 <div class="answers">
-        On Mercury you are...
-        On Venus you are...
-        On Mars you are...
-        On Jupiter you are...
-        On Saturn you are...
-        On Uranus you are...
-        On Neptune you are...
+    On Mercury you are...
+    <br>
+    On Venus you are...
+    <br>
+    On Mars you are...
+    <br>
+    On Jupiter you are...
+    <br>
+    On Saturn you are...
+    <br>
+    On Uranus you are...
+    <br>
+    On Neptune you are...
 </div>
 
 </body>
